--- a/eShop.Web.Modules/eShop.Web.CustomerPortal/Pages/ViewProductComponent.razor
+++ b/eShop.Web.Modules/eShop.Web.CustomerPortal/Pages/ViewProductComponent.razor
@@ -1,5 +1,8 @@
 ﻿@page "/product/{id:int}"
+
+@inject NavigationManager navigationManager
 @inject IViewProductUseCase viewProduct
+@inject IAddProductToCartUseCase addProductToCartUseCase
 
 <h3>Product Details</h3>
 
@@ -15,6 +18,7 @@
         </p>
 
     </div>
+    <button class="btn btn-primary" @onclick="AddToCart">Add to Cart</button>
 </div><br />
 <NavLink href="products">Back to Products</NavLink>
 
@@ -34,5 +38,12 @@
             product = viewProduct.Execute(Id);
 
     }
+
+    private void AddToCart()
+    {
+        addProductToCartUseCase.Execute(product.Id);
+        navigationManager.NavigateTo("/");
+    }
+
 
 }
