--- a/eShop.Web.Modules/eShop.Web.CustomerPortal/Controls/ProductItemComponent.razor
+++ b/eShop.Web.Modules/eShop.Web.CustomerPortal/Controls/ProductItemComponent.razor
@@ -2,7 +2,7 @@
 {
     <tr>
         <td>
-            <NavLink href="@($"product/{product.Id}")">
+            <NavLink href="@($"product/{product.ProductId}")">
                 @product.Name
             </NavLink>
            
