--- a/eShop.Web.Modules/eShop.Web.CustomerPortal/Pages/ViewProductComponent.razor
+++ b/eShop.Web.Modules/eShop.Web.CustomerPortal/Pages/ViewProductComponent.razor
@@ -41,7 +41,7 @@
 
     private void AddToCart()
     {
-        addProductToCartUseCase.Execute(product.Id);
+        addProductToCartUseCase.Execute(product.ProductId);
         navigationManager.NavigateTo("/");
     }
 
