Shopping cart page implementation

--- a/eShop.Web.Modules/eShop.Web.CustomerPortal/_Imports.razor
+++ b/eShop.Web.Modules/eShop.Web.CustomerPortal/_Imports.razor
@@ -1,7 +1,10 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Routing
 @using eShop.CoreBusiness.Models
+
 @using eShop.UseCases.SearchProductScreen
 @using eShop.UseCases.ViewProductScreen
+@using eShop.UseCases.ShoppingCartScreen
+
 @using eShop.Web.CustomerPortal.Controls
 @using eShop.Web.Common.Controls
