--- a/eShop.Web.Modules/eShop.Web.CustomerPortal/Controls/OrderSummaryComponent.razor
+++ b/eShop.Web.Modules/eShop.Web.CustomerPortal/Controls/OrderSummaryComponent.razor
@@ -35,7 +35,12 @@
                 <b>@itemsTotalPrice.ToString("c")</b>
             </div>
         </div>
-    </div><button class="btn btn-primary" @onclick="PlaceOrder">Place your order</button>
+
+        @if (!HidePlaceOrderButton)
+        {
+            <button class="btn btn-primary" @onclick="PlaceOrder">Place your order</button>
+        }
+    </div>
 </div>
 
 
@@ -46,6 +51,9 @@
 
     [Parameter]
     public Order Order { get; set; }
+
+    [Parameter]
+    public bool HidePlaceOrderButton { get; set; } = false;
 
     protected override void OnParametersSet()
     {
