--- a/eShop.Web.Modules/eShop.Web.CustomerPortal/_Imports.razor
+++ b/eShop.Web.Modules/eShop.Web.CustomerPortal/_Imports.razor
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Routing
+@using Microsoft.AspNetCore.Components.Forms
 @using eShop.CoreBusiness.Models
 
 @using eShop.UseCases.SearchProductScreen
@@ -8,5 +9,8 @@
 
 @using eShop.Web.CustomerPortal.Controls
 @using eShop.Web.Common.Controls
+@using eShop.Web.CustomerPortal.ViewModels
 
 @using eShop.UseCases.PluginInterfaces.StateStore
+
+
