Order confirmation page

--- a/eShop.Web.Modules/eShop.Web.CustomerPortal/_Imports.razor
+++ b/eShop.Web.Modules/eShop.Web.CustomerPortal/_Imports.razor
@@ -6,6 +6,7 @@
 @using eShop.UseCases.SearchProductScreen
 @using eShop.UseCases.ViewProductScreen
 @using eShop.UseCases.ShoppingCartScreen
+@using eShop.UseCases.OrderConfirmationScreen
 
 @using eShop.Web.CustomerPortal.Controls
 @using eShop.Web.Common.Controls
