Admin portal - Outstanding/Processed orders

--- a/eShop.Web/_Imports.razor
+++ b/eShop.Web/_Imports.razor
@@ -12,3 +12,4 @@
 @using eShop.CoreBusiness.Models
 @using eShop.UseCases.ViewProductScreen
 @using eShop.Web.CustomerPortal.Controls
+@using eShop.Web.CustomerPortal.Pages
