--- a/eShop.Web/App.razor
+++ b/eShop.Web/App.razor
@@ -1,6 +1,7 @@
 ﻿
 <Router AppAssembly="@typeof(Program).Assembly"  
-        AdditionalAssemblies="new[] { typeof(eShop.Web.CustomerPortal.Pages.ViewProductComponent).Assembly }">
+        AdditionalAssemblies="new[] { typeof(eShop.Web.CustomerPortal.Pages.ViewProductComponent).Assembly, 
+                              typeof(eShop.Web.AdminPortal.Pages.OutstandingOrdersComponent).Assembly}">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
     </Found>
