--- a/eShop.Web.Modules/eShop.Web.AdminPortal/Pages/ProcessedOrderComponent.razor
+++ b/eShop.Web.Modules/eShop.Web.AdminPortal/Pages/ProcessedOrderComponent.razor
@@ -1,5 +1,6 @@
 ﻿@page "/processedOrders"
 
+@attribute [Authorize]
 @inject IViewProcessedOrdersUseCase viewProcessedOrdersUseCase
 
 <h3>Processed Orders</h3>
