--- a/eShop.Web/_Imports.razor
+++ b/eShop.Web/_Imports.razor
@@ -13,3 +13,5 @@
 @using eShop.UseCases.ViewProductScreen
 @using eShop.Web.CustomerPortal.Controls
 @using eShop.Web.CustomerPortal.Pages
+
+@using eShop.Web.Common.Controls
