--- a/eShop.Web.Modules/eShop.Web.AdminPortal/_Imports.razor
+++ b/eShop.Web.Modules/eShop.Web.AdminPortal/_Imports.razor
@@ -1,10 +1,13 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Forms
+@using Microsoft.AspNetCore.Authorization
+
 @using eShop.CoreBusiness.Models
 @using eShop.Web.Common.Controls
 @using eShop.UseCases.AdminPortal.OrderDetailScreen
 @using eShop.UseCases.AdminPortal.OutstandingOrdersScreen
 @using eShop.UseCases.AdminPortal.ProcessedOrdersScreen
 @using eShop.Web.AdminPortal.Controls
+
 
