--- a/eShop.Web/App.razor
+++ b/eShop.Web/App.razor
@@ -3,7 +3,11 @@
         AdditionalAssemblies="new[] { typeof(eShop.Web.CustomerPortal.Pages.ViewProductComponent).Assembly, 
                               typeof(eShop.Web.AdminPortal.Pages.OutstandingOrdersComponent).Assembly}">
     <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
+        <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
+            <NotAuthorized>
+                <LoginComponent></LoginComponent>
+            </NotAuthorized>
+        </AuthorizeRouteView>
     </Found>
     <NotFound>
         <LayoutView Layout="@typeof(MainLayout)">
