--- a/eShop.Web.Modules/eShop.Web.AdminPortal/Pages/OrderDetailComponent.razor
+++ b/eShop.Web.Modules/eShop.Web.AdminPortal/Pages/OrderDetailComponent.razor
@@ -50,6 +50,16 @@
 
     private Order order;
 
+    private AuthenticationState authState;
+
+    [CascadingParameter]
+    private Task<AuthenticationState> authStateTask { get; set; }
+
+    protected override async Task OnInitializedAsync()
+    {
+        authState = await authStateTask;
+    }
+
     protected override void OnParametersSet()
     {
         base.OnParametersSet();
@@ -62,9 +72,9 @@
 
     private void HandleProcessOrder()
     {
-        if (order != null)
+        if (order != null && authState != null)
         {
-            processOrderUseCase.Execute(order.OrderId.Value, "admin");
+            processOrderUseCase.Execute(order.OrderId.Value, authState.User.Identity.Name);
             navigationManager.NavigateTo("/outstandingOrders");
         }
     }
