--- a/eShop.Web.Modules/eShop.Web.AdminPortal/Pages/OutstandingOrdersComponent.razor
+++ b/eShop.Web.Modules/eShop.Web.AdminPortal/Pages/OutstandingOrdersComponent.razor
@@ -1,4 +1,6 @@
 ﻿@page "/outstandingOrders"
+@page "/admin"
+
 
 @attribute [Authorize]
 @inject IViewOutstandingOrdersUseCase viewOutstandingOrdersUseCase
